[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wredis"
version = "0.2.2"
authors = [
    { name="wisrovi", email="wisrovi.rodriguez@gmail.com" },
]
description = "Redis control with Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wisrovi/wredis"
"Bug Tracker" = "https://github.com/wisrovi/wredis/issues"